Name:            xml
Version:         1.3.2
Homepage:        http://galois.com
Synopsis:        A simple XML library.
Description:     A simple XML library.
Category:        Text, XML
License:         BSD3
License-File:    LICENSE
Author:          Galois Inc.
Maintainer:      diatchki@galois.com
Copyright:       (c) 2007-2008 Galois Inc.
Build-depends:   base
Ghc-options:     -Wall -O2
Exposed-modules: Text.XML.Light,
                 Text.XML.Light.Types,
                 Text.XML.Light.Output,
                 Text.XML.Light.Input,
                 Text.XML.Light.Proc
                 Text.XML.Light.Cursor
Extensions:      FlexibleInstances
Build-type:      Simple
